# lib-python

./: CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: test.yml
src/lanpartydb/: deserialization.py  models.py  reading.py  serialization.py  writing.py
tests/deserialization/: test_deserialize_party.py  test_deserialize_party_from_toml.py  test_deserialize_series_from_toml.py  test_deserialize_series_list.py
tests/reading/: test_read_party_from_toml.py
tests/serialization/: test_serialize_party.py  test_serialize_party_to_toml.py  test_serialize_series.py  test_serialize_series_list.py  test_serialize_series_list_to_toml.py  test_serialize_series_to_toml.py
tests/writing/: test_serialize_party.py  test_serialize_series.py
