[project]
name = "lanpartydb"
version = "0.12.2.dev1"
description = "Python library for the OrgaTalk LAN Party Database"
readme = "README.md"
authors = [
    { name = "Jochen Kupperschmidt", email = "homework@nwsnet.de" }
]
requires-python = ">=3.11"
dependencies = [
    "tomlkit>=0.14.0",
]
license = { text = "MIT" }
keywords = [ "lanparty" ]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Repository = "https://github.com/lanpartydb/lib-python"
Changelog = "https://github.com/lanpartydb/lib-python/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest>=9.0.2",
]

[tool.pytest]
minversion = "9.0"
addopts = [
    "--import-mode=importlib",
    "-vv",
]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
lines-after-imports = 2
order-by-type = false

[tool.uv]
required-version = ">=0.11.2"
